# codingame

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: code_quality.yml
ai/coders-strike-back/: README.md  main.cpp
ai/mean-max/: Player.java  README.md  tests.txt
clash-of-code/fastest/: README.md  apartment_affordability.py  arithmetic_seq.py  ball_drop_bounce.py  boom_ts_bing_ding.py  bubble_sort_books.py  coin_change.py  compute_lcm.py  convert_number.py  count_double_letters.py  count_letters_digits.py  find_lost_int.py  find_seat.py  game_nb_claps.py  golf_score.py  house_painting.py  index_transformation.py  leet_speak.py  length_binary_number.py  lucky_ticket.py  mean_of_array.py  multiplicative_persistence.py  multiply_int.py  odd_even_checklist.py  odd_or_even.py  paper_folding.py  repeated_positions.py  reverse_case.py  shuffled_string.py  sort_unique_squares.py  strange_number.py  string_format.py  suggestion_engine.py  sum_occurrences.py  triangle_third_angle.py  tweet_covfefe.py  vowel_encryption.py
clash-of-code/reverse/: README.md  a_times_b_mod_c.py  add_one_if_even.py  binary_or.py  christmas_tree.py  convert_to_bin.py  count_vowels.py  factors_of_a_number.py  generate_grid.py  generate_matrix.py  generate_pattern.py  half_factorial.py  last_digit.py  letter_counter.py  not_already_seen.py  number_pattern.py  number_pyramid.py  power_minus_itself.py  power_times_100.py  print_ascii_code.py  print_odd_even.py  reverse_min.py  reverse_sort.py  reverse_xor.py  sort_pairs.py  space_between_alpha.py  square_sum_digits.py  x_plus_sum_digits.py
clash-of-code/shortest/: README.md  all_divisible.py  binary_opposite.py  city_pop_search.py  convert_hex_to_dec.py  dec_to_bin_count.py  dna.rb  factorial_calculation.py  find_difference.py  hexagon.py  last_digit_bin_hex.py  max_power.py  means_array_pairs.py  mens_wifes_kids.py  montly_interest.py  muffins.py  nato_alphabet.py  number_categories.py  odd_ascii_code.py  power_sum_digits.py  print_abcd.py  print_chars_before.py  prog_lang.py  r_sequence.py  reverse_number_pyramid.py  run_length_encoding.py  sort_list_numbers.py  sum_alphabet_index.py  sum_ascii.py  sum_ascii_codes.py  sum_powers_of_two.py  sum_product_equation.py  tall_number.py  unclean_names.py
community-puzzles/1d-spreadsheet/: 1d-spreadsheet.rb  1d_spreadsheet.py
community-puzzles/a-star-exercise/: a_star_exercise.py
community-puzzles/alternative-vote/: alternative_vote.py
community-puzzles/ancestors-and-descendants/: ancestors-and-descendants.rb  ancestors_and_descendants.py
community-puzzles/bruce-lee/: .gitignore
community-puzzles/greatest-number/: .gitignore
community-puzzles/horse-racing-hyperduals/: README.md  horse_racing_hyperduals.py
community-puzzles/levenshtein-distance/: main.cpp
community-puzzles/magic-stones/: magic-stones.py
community-puzzles/micro-assembly/: micro-assembly.cs
community-puzzles/number-of-letters/: number-of-letters.js
community-puzzles/simple-safecracking/: solution.rb
community-puzzles/simplify-selection-ranges/: .gitignore
community-puzzles/sum-of-divisors/: solution.rb
community-puzzles/the-fastest/: the_fastest.py
community-puzzles/the-river/: the_river.py
community-puzzles/timer-clash/: timer_clash.py
community-puzzles/travelling-salesman/: travelling-salesman.php  travelling_salesman.py
community-puzzles/vote-counting/: vote-counting.php
community-puzzles/xp-creating-puzzles/: xp_creating_puzzles.py
contests/detective-pikaptcha/: README.md  level1.py  level2.cs  level2.py  level2.ts
contests/mean-max/: README.md
optimization/travelling-salesman/: travelling_salesman.py
puzzles/cpp/: ascii-art.cpp  mars-lander1.cpp  onboarding.cpp  power-of-thor1.cpp  shadows-knight1.cpp  super-computer.cpp  temperatures.cpp  the-descent.cpp  there-is-no-spoon1.cpp  war.cpp
puzzles/go/: ascii-art.go  conway-sequence.go  dont-panic1.go  horse-racing-duals.go  mars-lander1.go  mime-type.go  power-of-thor1.go  (+6 more)
(+376 files in other folders)
